--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url(../assets/background-mobile-home_page.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+
 nav ul,
 .gender-selection-small {
     display: none;
@@ -7,6 +14,10 @@ header {
     background-color: transparent;
     margin-top: 120px;
 }
+
+.logo img {
+    width: 250px;
+}    
 
 .checkout-button {
     visibility: hidden;
@@ -44,9 +55,4 @@ header {
     font-size: 1.5em;
     padding: 3px 40px;
     border-radius: 5px;
-}
-
-.cta-browse a:hover {
-    background-color: #113340;
-    color: #FCFEFC;
 }
