--- a/css/media.css
+++ b/css/media.css
@@ -1,8 +1,42 @@
 @media (min-width: 650px) {
     body {
-        background: none;
+        background-image: url(../assets/background.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-width: none;
     }
 
+    .logo img {
+        width: 220px;
+    }
+    
+    .cart-icon {
+        width: 40px;
+        height: auto;
+    }
+    
+    .checkout-button span{
+        display: block;
+        color: #113340;
+        font-size: 1em;
+    }
+
+    .nav-cta {
+        width: 120px;
+    }
+
+    .main-content,
+    .main-headings {
+        max-width: 1000px;
+        margin: auto;
+        border-radius: 0;
+    }
+
+    .main-content {
+       padding-bottom: bottom; 
+    }
+    
+    /* Home page specific media querys */
     header {
         background-color: #FFDD15;
         margin-top: 0;
@@ -18,35 +52,20 @@
         flex: 1;
         text-align: center;
     }
-    
-    .logo img {
-        width: 250px;
-    }
-    
-    .checkout-button {
-        visibility: visible;
-    }
-    
-    .checkout-button {
-        padding-top: 20px;
-        transform: translateX(-50px);
-    }
-    
-    .checkout-button span{
-        display: block;
-        color: #113340;
-    }
 
     .home_page {
-        background-image: url(../assets/background-home_page.jpg);
+        background-image: url(../assets/background.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         min-width: none;
     }
-
-    /* Home page specific media querys */
+    
     nav ul {
         display: block;
+    }
+
+    .checkout-button {
+        visibility: visible;
     }
 
     .gender-selection-small {
@@ -74,4 +93,58 @@
     .introduction-home {
         margin-top: 100px;
     }
+
+    .cta-browse:hover,
+    .cta-about:hover,
+    .cta-contact:hover {
+        box-shadow: 0px 0px 10px 5px #888888;
+        transition: 0.3s ease;
+    }
+
+    /* Gender selection page */
+    .gender-selection-main {
+        max-width: 1000px;
+        margin: 0px auto;
+    }
+
+    .gender-selection-images {
+        height: 400px;
+    }
+
+    .gender-selection-images_men {
+        border-radius: 0 0 5px 5px;
+    }
+
+    .gender-selection-link h1 {
+        top: 140px;
+        left: 40px;
+    }
+
+    .gender-selection h1:hover {
+        text-decoration: underline;
+        text-underline-offset: 5px;
+    }
+
+    /* Jacket pages */
+    .product-list {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+    }
+
+    .product-list h1 h2{
+        grid-row: 1;
+    }
+
+    .jackets-listed {
+        width: 100%;
+        height: 350px;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+
+    .cta-show_item:hover {
+        box-shadow: 0px 0px 10px 3px #888888;
+        transition: 0.3s ease;
+    }
+
 }
