--- a/css/styles.css
+++ b/css/styles.css
@@ -9,20 +9,49 @@ body {
     margin: 0px;
     display: grid;
     grid-template-rows: auto 1fr auto;
-    background-image: url(../assets/background-mobile-home_page.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
+    background-color: #D6DBDC;
 }
 
 h1 {
     font-family: var(--text-heading), Helvetica, Tahoma, sans-serif;
     font-size: 1.5em;
-    font-style: bold;
+    font-style: normal;
     text-align: center;
     text-decoration: none;
-    color: #113340;
     letter-spacing: 2px;
+    margin: 20px auto 0px;
+}
+
+h2 {
+    font-family: Tahoma, Helvetica, Verdana, sans-serif;
+    font-size: 1.2em;
+    font-style: normal;
+    font-weight: 500;
+    text-align: center;
+    text-decoration: none;
+    letter-spacing: 1px;
+    margin: 0px auto;
+}
+
+h3 {
+    font-family: Tahoma, Helvetica, Verdana, sans-serif;
+    font-size: 1em;
+    font-style: normal;
+    font-weight: 600;
+    text-align: left;
+    text-decoration: none;
+    letter-spacing: 0.5px;
+    margin: 10px 5px;
+}
+
+.price {
+    font-family: Tahoma, Helvetica, Verdana, sans-serif;
+    font-size: 1em;
+    font-style: normal;
+    text-align: left;
+    text-decoration: none;
+    letter-spacing: 0.5px;
+    margin: 5px 5px;
 }
 
 a {
@@ -49,7 +78,7 @@ header {
 }
 
 .logo img {
-    width: 250px;
+    width: 185px;
 }
 
 .back_button {
@@ -57,13 +86,18 @@ header {
 }
 
 .checkout-button {
-    padding-top: 20px;
-    transform: translateX(-50px);
+    margin-top: 35px;
+}
+
+.cart-icon {
+    width: 35px;
+    height: auto;
 }
 
 .checkout-button span{
     display: block;
     color: #113340;
+    font-size: 0.8em;
 }
 
 nav {
@@ -78,6 +112,7 @@ nav li {
 nav a:hover {
     background-color: var(--color-nav-hover);
     color: var(--color-nav-a-hover);
+    transition: 0.4s ease;
 }
 
 nav ul {
@@ -90,11 +125,17 @@ nav ul {
     text-underline-offset: 5px;
 }
 
+.checkout-button a:hover {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    color: #113340;
+}
+
 .cta {  
     background-color: #113340;
     color: #FCFEFC;
     display: block;
-    width: 150px;
+    width: 120px;
     height: 45px;
     line-height: 45px;
     text-align: center;
@@ -105,10 +146,23 @@ nav ul {
 
 .nav-cta {  
     display: inline-block;
-    width: 120px;
+    width: 100px;
     height: 60px;
     line-height: 60px;
     border-radius: 0px;
+}
+
+.main-headings{
+    background-color: #FCFEFC;
+    padding: 5px 40px 40px;
+    margin: 0 8%;
+} 
+
+.main-content {
+    background-color: #FCFEFC;
+    padding: 5px 40px 20px ;
+    margin: 0 8% 40px;
+    border-radius: 0 0 5px 5px;
 }
 
 footer {
