--- a/css/jackets-men.css
+++ b/css/jackets-men.css
@@ -4,7 +4,7 @@
     gap: 20px;
 }
 
-.jackets-listed {
+.jackets-listed_image {
     width: 100%;
     height: 350px;
     object-fit: cover;
@@ -39,5 +39,5 @@
     background-color: #FFDD15;
     color: #113340;
     width: 120px;
-    transform:translateY(50px)
+    transform: translateY(50px)
 }
