--- a/css/media.css
+++ b/css/media.css
@@ -49,14 +49,10 @@
     .main-content,
     .main-headings {
         max-width: 1000px;
-        margin: auto;
+        margin: 0 auto;
         border-radius: 0;
     }
 
-    .main-content {
-        padding-bottom: bottom; 
-        border-radius: 0 0 5px 5px;
-     }
     /* Home page media querys */
     header {
         background-color: #FFDD15;
@@ -147,27 +143,51 @@
     }
 
     /* Jacket pages media querys */
-    .product-list {
-        grid-template-columns: repeat(3, 1fr);
-        gap: 30px;
-    }
-
-    .product-list h1 h2{
-        grid-row: 1;
-    }
-
-    .jackets-listed_image {
-        width: 100%;
-        height: 350px;
-        object-fit: cover;
-        border-radius: 5px;
-    }
-
     .cta-show_item:hover,
     .buy-now_button:hover,
     .add-to-cart_button:hover {
         box-shadow: 0px 0px 10px 7px #D3D3D3;
         transition: 0.3s ease;
+    }
+
+    .jackets-listed_image {
+        width: 100%;
+        height: 280px;
+    }
+
+    .product-list {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px 3%;
+    }
+
+    .products h3, .products p {
+        margin: 5px 0px 0px;
+    }
+
+    /* About page */
+    .main-content {
+        max-width: 1000px;
+        margin: 0px auto;
+    }
+
+    .about_h2 {
+        text-align: left;
+        margin: 0px 100px 5px;
+    }
+
+    .about_text {
+        max-width: 500px;
+        margin: 5px 100px 30px;
+    }
+}
+
+@media (min-width: 800px) {
+    .product-list {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .product-list h1 h2{
+        grid-row: 1;
     }
 }
 
