--- a/css/styles.css
+++ b/css/styles.css
@@ -146,16 +146,18 @@ nav ul {
     border-radius: 0px;
 }
 
-.main-headings{
+.main-headings,
+.about_h1 {
     background-color: #FCFEFC;
     padding: 5px 40px 40px;
-    margin: 0 5%;
+    margin: 20px 5% 0px;
+    border-radius: 5px 5px 0 0;
 } 
 
 .main-content {
     background-color: #FCFEFC;
     padding: 5px 40px 20px ;
-    margin: 0 5% 40px;
+    margin: 0px 5% 20px;
     border-radius: 0 0 5px 5px;
 }
 
