--- a/css/media.css
+++ b/css/media.css
@@ -89,7 +89,7 @@
         max-width: 300px;
         display: flex;
         flex-direction: row;
-        margin: 50px auto;
+        margin: 50px auto 30px;
     }
     
     .gender-selection-small > * {
@@ -104,11 +104,16 @@
     }
     
     .small-gender_images {
-        width: 50%;
+        width: 70%;
     }
     
     .introduction-home {
-        margin-top: 100px;
+        margin-top: 0px;
+    }
+
+    .home-page_buttons {
+        text-align: center;
+        margin: 80px auto;
     }
 
     .cta-browse:hover,
@@ -152,7 +157,7 @@
 
     .jackets-listed_image {
         width: 100%;
-        height: 280px;
+        height: 260px;
     }
 
     .product-list {
