--- a/css/gender-selection.css
+++ b/css/gender-selection.css
@@ -1,14 +1,18 @@
+body {
+    background-color: #113340;
+}
+
 .gender-selection {
     position: relative;
     margin: 0;
 }
 
 .gender-selection-link h1 {
-    font-weight: lighter;
+    font-weight: 500;
     font-size: 1.8em;
     color: #FCFEFC;
     position: absolute;
-    top: 100px;
+    top: 60px;
     left: 10px;
 }
 
