--- a/css/media.css
+++ b/css/media.css
@@ -5,6 +5,11 @@
         object-fit: cover;
         margin: 5px auto;
     }
+
+    .checkout_image {
+        width: 30%;
+    }
+
 }
 
 @media (min-width: 650px) {
@@ -110,7 +115,8 @@
         transition: transform 2s;
     }
 
-    .small-gender_images:hover {
+    .small-gender_images:hover,
+    .cta-show_item:hover {
         transform: scale(1.1);
     }
 
@@ -123,11 +129,18 @@
         margin: 80px auto;
     }
 
+    .continue-shopping_button:hover,
+    .pay-now_button:hover,
     .cta-browse:hover,
     .cta-about:hover,
     .cta-contact:hover {
-        box-shadow: 0px 0px 10px 5px #D3D3D3;
         transition: 0.3s ease;
+        transform: scale(1.2);
+    }
+
+    .cta-about:hover,
+    .cta-contact:hover {
+        transform: scale(1.1);
     }
 
     /* Gender selection page media querys */
@@ -182,7 +195,10 @@
     }
 
     /* Jacket pages media querys */
-    .cta-show_item:hover,
+    .cta-show_item:hover {
+        transition: 0.3s ease;
+    }
+
     .buy-now_button:hover,
     .add-to-cart_button:hover {
         box-shadow: 0px 0px 10px 7px #D3D3D3;
@@ -217,6 +233,25 @@
     .about_text {
         max-width: 500px;
         margin: 5px 100px 30px;
+    }
+
+    /* Checkout pages media querys */
+    .checkout_items,
+    #shipping-info {
+        margin: 50px 70px 0px;
+    }
+
+    #shipping-info {
+        text-align: left;
+        margin-bottom: 50px;
+    }
+
+    .continue-shopping_button {
+        
+    }
+
+    #checkout-success_h1 {
+        margin: 50px auto 45px;
     }
 }
 
