updated margin for submit-button on contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -42,5 +42,5 @@ textarea {
     background: #FF6254;
     line-height: 19px;
     font-weight: 600;
-    margin-top: 20px
+    margin: 20px auto;
 }
