--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,11 @@ body {
     margin: 0px;
     display: grid;
     grid-template-rows: auto 1fr auto;
-    background-color: #D6DBDC;
+    background-color: var(--color-body-background);
 }
 
 h1 {
-    font-family: var(--text-heading), Helvetica, Tahoma, sans-serif;
+    font-family: var(--text-h1), Helvetica, Tahoma, sans-serif;
     font-size: 1.5em;
     font-style: normal;
     text-align: center;
@@ -23,7 +23,7 @@ h1 {
 }
 
 h2 {
-    font-family: Tahoma, Helvetica, Verdana, sans-serif;
+    font-family: var(--text-h2-h2), Helvetica, Verdana, sans-serif;
     font-size: 1.2em;
     font-style: normal;
     font-weight: 500;
@@ -34,11 +34,11 @@ h2 {
 }
 
 h3 {
-    color: #113340;
-    font-family: Tahoma, Helvetica, Verdana, sans-serif;
+    font-family: var(--text-h2-h2), Helvetica, Verdana, sans-serif;
     font-size: 1em;
     font-style: normal;
     font-weight: 500;
+    color: #113340;
     text-align: left;
     text-decoration: none;
     letter-spacing: 0.5px;
@@ -60,11 +60,11 @@ a {
     font-size: 1.2em;
     font-style: normal;
     text-decoration: none;
-    color: #FCFEFC;
+    color: var(--color-a);
 }
 
 p {
-    color: #113340;
+    color: var(--color-paragraph);
     line-height: 22px;
 }
 
@@ -126,8 +126,8 @@ nav ul {
 }
 
 .cta {  
-    background-color: #113340;
-    color: #FCFEFC;
+    background-color: var(--color-cta-background);
+    color: var(--color-cta);
     display: block;
     width: 120px;
     height: 45px;
