--- a/imports/variables.css
+++ b/imports/variables.css
@@ -1,8 +1,14 @@
 :root {
     --text-paragraph: "Tahoma";
-    --text-heading: "Arial";
+    --text-h1: "Arial";
+    --text-h2-h3: "Tahoma";
+    --color-paragraph: #113340;
+    --color-a: #FCFEFC;
+    --color-body-background: #D6DBDC;
     --color-header-background: #FFDD15;
     --color-nav-footer: #113340;
     --color-nav-hover: #FFDD15;
     --color-nav-a-hover: #113340;
+    --color-cta-background: #113340;
+    --color-cta: #fcfcfc;
 }
