--- a/css/contact.css
+++ b/css/contact.css
@@ -1,12 +1,3 @@
-input, 
-textarea {
-    border: 1px solid #D3D3D3;
-    border-radius: 5px;
-    margin: 10px 10px 10px 0px;
-    padding: 10px;
-    max-width: 213px;
-}
-
 .contact {
     text-align: center;
     margin: 20px 5%;
@@ -21,26 +12,20 @@ textarea {
     height: 45%;
 }
 
-.forms-container {
-    display: flex;
-    text-align: left;
-    flex-direction: column;
-}
-
-.forms-container > * {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.name-email {
-    margin-bottom: 40px;
-}
-
 .cta-send {
     border: 0px;
     background: #FF6254;
     line-height: 19px;
     font-weight: 600;
     margin: 20px auto;
+}
+
+.cta-send:hover {
+    cursor: pointer;
+    background-color: #941f15;
+}
+
+.contact-us-success {
+    display: none;
+    margin-top: 20px;
 }
