--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,7 @@ nav ul {
     font-size: 1.2em;
     border-radius: 5px;
     margin: auto;
+    transition: ease-in-out .4s;
 }
 
 .nav-cta {  
@@ -144,6 +145,13 @@ nav ul {
     height: 60px;
     line-height: 60px;
     border-radius: 0px;
+}
+
+.continue-shopping_button {
+    background-color: #FFDD15;
+    color: #113340;
+    width: 200px;
+    margin: 40px auto 20px;
 }
 
 .main-headings,
@@ -159,6 +167,54 @@ nav ul {
     padding: 5px 40px 20px ;
     margin: 0px 5% 20px;
     border-radius: 0 0 5px 5px;
+}
+
+input, 
+textarea,
+select {
+    width: 100%;
+    max-width: 100px;
+    border: 1px solid #D3D3D3;
+    border-radius: 5px;
+    margin: 10px 10px 10px 0px;
+    padding: 10px;
+}
+
+.forms-container {
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+}
+
+.forms-container > * {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.name-email {
+    margin-bottom: 40px;
+}
+
+.checkbox {
+    margin: 20px auto 25px;
+    text-align: left;
+}
+
+#newsletter {
+    text-align: left;
+    width: auto;
+}
+
+#newsletter:hover {
+    cursor: pointer;
+}
+
+.form-error-message {
+    display: none;
+    color: red;
+    font-size: 1rem;
+    margin-bottom: 10px;
 }
 
 footer {
