--- a/css/media.css
+++ b/css/media.css
@@ -39,6 +39,10 @@
         width: 40px;
         height: auto;
     }
+
+    .back_button {
+        cursor: pointer;
+    }
     
     .checkout-button span{
         display: block;
