--- a/css/media.css
+++ b/css/media.css
@@ -255,7 +255,9 @@
 
     .product-list {
         grid-template-columns: repeat(2, 1fr);
-        gap: 30px 3%;
+        gap: 80px 3%;
+        padding-bottom: 80px;
+        border-radius: 0px 0px 10px 10px;
     }
 
     .products h3, .products p {
@@ -322,7 +324,8 @@
     .jacket-specific-container {
         flex-direction: row;
         padding-top: 30px;
-        padding-bottom: 90px;
+        padding-bottom: 80px;
+        border-radius: 0px 0px 10px 10px;
     }
 
     .add-to-cart_button {
@@ -349,5 +352,12 @@
         max-width: 300px;
         text-align: left;
         margin-left: 50px;
+    }
+
+    .size-container {
+        width: 120px;
+        text-align: left;
+        margin-left: 40px;
+        padding: 15px 0px 20px;
     }
 }
