--- a/css/styles.css
+++ b/css/styles.css
@@ -235,6 +235,18 @@ select {
     flex: 10;
 }
 
+.price-stock-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    height: 30px;
+}
+
+.price-stock-container > * {
+    flex: 1;
+}
+
 footer {
     background-color: var(--color-nav-footer);
     text-align: center;
